Registration complete. Tables no longer spill

--- a/coillteachlibrary.css
+++ b/coillteachlibrary.css
@@ -185,6 +185,12 @@ h2{
   color: #EEE9AA;
 }
 
+.ErrorMessage
+{
+  color:red;
+  text-align: center;
+}
+
 /*Second border for the craic*/
 .secondBorder
 {
@@ -193,6 +199,7 @@ h2{
   border-color: #604D53;
   border-radius: 5px;
   display: grid;
+  overflow-x: scroll;
 }
 
 .SectionImg
@@ -224,7 +231,7 @@ footer
 
 div ul
 {
-  text-align: left;
+  text-align: center;
   color:#EEE9AA;
 }
 
@@ -261,6 +268,7 @@ th, td, tr
 {
   display: grid;
   place-items: center;
+  word-wrap: break-word;
 }
 
 
